[package]
name = "gateway-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-rt = "2.0.2"
actix-web = "4.0.0-rc.3"

chrono = {version = "0.4.0", features = ["serde"]}
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1"
dotenv = "0.15.0"

serde = "1"
serde_json = "1"
serde_with = { version = "1.12.0", features = ["json"]}
# Needed for Postgres.
openssl = "*"
openssl-probe = "0.1.2"