[package]
name = "gateway-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-cors = "0.6.0"
actix-rt = "2.0.2"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"
actix-web-grants= "3.0.0"
actix-web-validator = "3.0"

chrono = {version = "0.4.0", features = ["serde"]}
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1"
dotenv = "0.15.0"

futures = "0.3.1"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
validator = { version = "0.14", features = ["derive"] }
jsonwebtoken = "8"
serde = "1"
serde_json = "1"
serde_with = { version = "1.12.0", features = ["json"]}
# Needed for Postgres.
openssl = "*"
openssl-probe = "0.1.2"
blake3 = "1.3.1"
derive_more = "0.99.17"